FIX HALO AROUND BLURRED LOW-RES LOADER IMAGE
Use custom CSS filter, and get rid of scaling as not necessary anymore.

--- a/Blog/static/Blog/CSS/lazy.css
+++ b/Blog/static/Blog/CSS/lazy.css
@@ -1,6 +1,6 @@
 .progressive img.preview {
 	filter: blur(1vw);
-	transform: scale(1.03);
+	filter: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='a' x='0' y='0' width='1' height='1'%3E%3CfeGaussianBlur stdDeviation='4' result='b'/%3E%3CfeMorphology operator='dilate' radius='4'/%3E %3CfeMerge%3E%3CfeMergeNode/%3E%3CfeMergeNode in='b'/%3E%3C/feMerge%3E%3C/filter%3E%3C/svg%3E#a");
 }
 
 .progressive img.reveal {
@@ -8,6 +8,6 @@
 }
 
 @keyframes progressiveReveal {
-	0% { transform: scale(1.03); opacity: 0; }
-	100% { transform: scale(1); opacity: 1; }
+	0% { opacity: 0; }
+	100% { opacity: 1; }
 }
